--- a/package.json
+++ b/package.json
@@ -1,44 +1,26 @@
 {
-  "name": "landing",
-  "version": "0.0.1",
-  "description": "Tandil.dev landing page",
-  "main": "index.js",
+  "name": "with-typescript",
+  "version": "1.0.0",
   "scripts": {
-    "start": "npm run build && node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "dev": "next",
+    "build": "next build",
+    "now-build": "next build",
+    "start": "next start",
+    "type-check": "tsc",
+    "deploy:production": "now --target production",
+    "tsc": "tsc"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/blockchain-tandil/landing.git"
-  },
-  "keywords": [
-    "typescript",
-    "react",
-    "tandil",
-    "devs"
-  ],
-  "author": "",
-  "license": "SEE LICENSE IN LICENSE",
-  "bugs": {
-    "url": "https://github.com/blockchain-tandil/landing/issues"
-  },
-  "homepage": "https://github.com/blockchain-tandil/landing#readme",
   "dependencies": {
-    "express": "^4.16.4",
+    "@zeit/next-typescript": "^1.1.1",
+    "next": "^8.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.3",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.4.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-middleware": "^3.6.2",
-    "webpack-hot-middleware": "^2.24.3"
-  }
+    "@types/next": "^7.0.6",
+    "@types/react": "^16.4.16",
+    "@types/react-dom": "16.0.11",
+    "typescript": "3.2.4"
+  },
+  "license": "ISC"
 }
