--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@types/styled-jsx": "^2.2.8",
     "@zeit/next-typescript": "^1.1.1",
     "next": "^8.0.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
     "@types/next": "^7.0.6",
