--- a/now.json
+++ b/now.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
     "alias": "tandil.dev",
-    "builds": [{ "src": "next.config.js", "use": "@now/next" }]
+    "builds": [
+      { "src": "assets/**/*", "use": "@now/static" },
+      { "src": "index.html", "use": "@now/static" }
+    ]
   }
   
